PBLv2Parser.py
# Generated from PBLv2.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PBLv2Parser ( Parser ):

    grammarFileName = "PBLv2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'//'", "'='", "'if'", "'('", 
                     "')'", "'->'", "'messageText'", "'messageImage'", "'messageAudio'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ALPHANUM", "UNQUOTED_STRING", "STRING", "NEWLINE", 
                      "WHITESPACE" ]

    RULE_prog = 0
    RULE_block = 1
    RULE_statement = 2
    RULE_inStatement = 3
    RULE_comment = 4
    RULE_varAssignment = 5
    RULE_value = 6
    RULE_ifBlock = 7
    RULE_pipeStream = 8
    RULE_function = 9
    RULE_inputData = 10
    RULE_functionName = 11
    RULE_varName = 12

    ruleNames =  [ "prog", "block", "statement", "inStatement", "comment", 
                   "varAssignment", "value", "ifBlock", "pipeStream", "function", 
                   "inputData", "functionName", "varName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    ALPHANUM=12
    UNQUOTED_STRING=13
    STRING=14
    NEWLINE=15
    WHITESPACE=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PBLv2Parser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PBLv2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(PBLv2Parser.StatementContext,i)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PBLv2Parser.BlockContext)
            else:
                return self.getTypedRuleContext(PBLv2Parser.BlockContext,i)


        def getRuleIndex(self):
            return PBLv2Parser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = PBLv2Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 73258) != 0):
                self.state = 28
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 5, 9, 10, 11, 12, 16]:
                    self.state = 26
                    self.statement()
                    pass
                elif token in [1]:
                    self.state = 27
                    self.block()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 33
            self.match(PBLv2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PBLv2Parser.StatementContext)
            else:
                return self.getTypedRuleContext(PBLv2Parser.StatementContext,i)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(PBLv2Parser.WHITESPACE)
            else:
                return self.getToken(PBLv2Parser.WHITESPACE, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PBLv2Parser.NEWLINE)
            else:
                return self.getToken(PBLv2Parser.NEWLINE, i)

        def getRuleIndex(self):
            return PBLv2Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = PBLv2Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(PBLv2Parser.T__0)
            self.state = 39
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 36
                    _la = self._input.LA(1)
                    if not(_la==15 or _la==16):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 41
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 45
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 42
                    self.statement() 
                self.state = 47
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15 or _la==16:
                self.state = 48
                _la = self._input.LA(1)
                if not(_la==15 or _la==16):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(PBLv2Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inStatement(self):
            return self.getTypedRuleContext(PBLv2Parser.InStatementContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PBLv2Parser.NEWLINE)
            else:
                return self.getToken(PBLv2Parser.NEWLINE, i)

        def getRuleIndex(self):
            return PBLv2Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PBLv2Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.inStatement()
            self.state = 58 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 57
                    self.match(PBLv2Parser.NEWLINE)

                else:
                    raise NoViableAltException(self)
                self.state = 60 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varAssignment(self):
            return self.getTypedRuleContext(PBLv2Parser.VarAssignmentContext,0)


        def ifBlock(self):
            return self.getTypedRuleContext(PBLv2Parser.IfBlockContext,0)


        def pipeStream(self):
            return self.getTypedRuleContext(PBLv2Parser.PipeStreamContext,0)


        def comment(self):
            return self.getTypedRuleContext(PBLv2Parser.CommentContext,0)


        def getRuleIndex(self):
            return PBLv2Parser.RULE_inStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInStatement" ):
                listener.enterInStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInStatement" ):
                listener.exitInStatement(self)




    def inStatement(self):

        localctx = PBLv2Parser.InStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_inStatement)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.varAssignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.ifBlock()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.pipeStream()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.comment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(PBLv2Parser.WHITESPACE)
            else:
                return self.getToken(PBLv2Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return PBLv2Parser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = PBLv2Parser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 68
                self.match(PBLv2Parser.WHITESPACE)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(PBLv2Parser.T__2)
            self.state = 76 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 75
                    self.matchWildcard()

                else:
                    raise NoViableAltException(self)
                self.state = 78 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varName(self):
            return self.getTypedRuleContext(PBLv2Parser.VarNameContext,0)


        def value(self):
            return self.getTypedRuleContext(PBLv2Parser.ValueContext,0)


        def pipeStream(self):
            return self.getTypedRuleContext(PBLv2Parser.PipeStreamContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(PBLv2Parser.WHITESPACE)
            else:
                return self.getToken(PBLv2Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return PBLv2Parser.RULE_varAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarAssignment" ):
                listener.enterVarAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarAssignment" ):
                listener.exitVarAssignment(self)




    def varAssignment(self):

        localctx = PBLv2Parser.VarAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varAssignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.varName()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 81
                self.match(PBLv2Parser.WHITESPACE)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(PBLv2Parser.T__3)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 88
                self.match(PBLv2Parser.WHITESPACE)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 94
                self.value()
                pass

            elif la_ == 2:
                self.state = 95
                self.pipeStream()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(PBLv2Parser.STRING, 0)

        def varName(self):
            return self.getTypedRuleContext(PBLv2Parser.VarNameContext,0)


        def getRuleIndex(self):
            return PBLv2Parser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = PBLv2Parser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_value)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(PBLv2Parser.STRING)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.varName()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(PBLv2Parser.ValueContext,0)


        def pipeStream(self):
            return self.getTypedRuleContext(PBLv2Parser.PipeStreamContext,0)


        def statement(self):
            return self.getTypedRuleContext(PBLv2Parser.StatementContext,0)


        def block(self):
            return self.getTypedRuleContext(PBLv2Parser.BlockContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(PBLv2Parser.WHITESPACE)
            else:
                return self.getToken(PBLv2Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return PBLv2Parser.RULE_ifBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBlock" ):
                listener.enterIfBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBlock" ):
                listener.exitIfBlock(self)




    def ifBlock(self):

        localctx = PBLv2Parser.IfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(PBLv2Parser.T__4)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 103
                self.match(PBLv2Parser.WHITESPACE)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 109
            self.match(PBLv2Parser.T__5)
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 110
                self.value()
                pass

            elif la_ == 2:
                self.state = 111
                self.pipeStream()
                pass


            self.state = 114
            self.match(PBLv2Parser.T__6)
            self.state = 118
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 115
                    self.match(PBLv2Parser.WHITESPACE) 
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 5, 9, 10, 11, 12, 16]:
                self.state = 121
                self.statement()
                pass
            elif token in [1]:
                self.state = 122
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipeStreamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PBLv2Parser.FunctionContext)
            else:
                return self.getTypedRuleContext(PBLv2Parser.FunctionContext,i)


        def inputData(self):
            return self.getTypedRuleContext(PBLv2Parser.InputDataContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(PBLv2Parser.WHITESPACE)
            else:
                return self.getToken(PBLv2Parser.WHITESPACE, i)

        def getRuleIndex(self):
            return PBLv2Parser.RULE_pipeStream

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipeStream" ):
                listener.enterPipeStream(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipeStream" ):
                listener.exitPipeStream(self)




    def pipeStream(self):

        localctx = PBLv2Parser.PipeStreamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pipeStream)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.state = 125
                self.function()
                pass
            elif token in [9, 10, 11]:
                self.state = 126
                self.inputData()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8 or _la==16:
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 129
                    self.match(PBLv2Parser.WHITESPACE)
                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 135
                self.match(PBLv2Parser.T__7)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 136
                    self.match(PBLv2Parser.WHITESPACE)
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 142
                self.function()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionName(self):
            return self.getTypedRuleContext(PBLv2Parser.FunctionNameContext,0)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PBLv2Parser.ValueContext)
            else:
                return self.getTypedRuleContext(PBLv2Parser.ValueContext,i)


        def getRuleIndex(self):
            return PBLv2Parser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = PBLv2Parser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.functionName()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12 or _la==14:
                self.state = 149
                self.value()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputDataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PBLv2Parser.RULE_inputData

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputData" ):
                listener.enterInputData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputData" ):
                listener.exitInputData(self)




    def inputData(self):

        localctx = PBLv2Parser.InputDataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_inputData)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3584) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALPHANUM(self):
            return self.getToken(PBLv2Parser.ALPHANUM, 0)

        def getRuleIndex(self):
            return PBLv2Parser.RULE_functionName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionName" ):
                listener.enterFunctionName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionName" ):
                listener.exitFunctionName(self)




    def functionName(self):

        localctx = PBLv2Parser.FunctionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(PBLv2Parser.ALPHANUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALPHANUM(self):
            return self.getToken(PBLv2Parser.ALPHANUM, 0)

        def getRuleIndex(self):
            return PBLv2Parser.RULE_varName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarName" ):
                listener.enterVarName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarName" ):
                listener.exitVarName(self)




    def varName(self):

        localctx = PBLv2Parser.VarNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_varName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(PBLv2Parser.ALPHANUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





